--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 title: My GitHub Pages
 description: Welcome to my site!
 theme: minima
+
+markdown: kramdown
+kramdown:
+   parse_block_html: true
+   
