--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: My GitHub Pages
-description: Welcome to my site!
+title: Rockhistorier
 theme: minima
 
 markdown: kramdown
 kramdown:
    parse_block_html: true
-   
