--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Rockhistorier
 description: I et hvert hjem med respekt for sig selv
-theme: Midnight
+theme: midnight
 
 markdown: kramdown
 
